add sh file